# outbush-ai

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  the_plan.html
agentdocs/: ARCHITECTURE.md  MODELS_AND_DEPLOYMENT.md  RAG_AND_SAFETY.md  README.md  VERIFICATION.md
data/: outbush_knowledge.sqlite  weather_cache.json
docs/: badges_for_yaml.txt  current_entracts.md  demo_flow.md  field_notes_template.md  gradio_docs.txt  judging_critia.txt  model_and_data_plan.md  snake_photo_assessment.json  snake_photo_assessment.md  submission_checklist.md  survival_question_assessment.json  survival_question_assessment.md  verification_report.md  why.txt
modal_jobs/: outbush_lora_smoke.py  outbush_species_finetune.py
models/: outbush_dangerous_species_classifier.json  training_report.json  vision_training_manifest.json
outbush_ai/: __init__.py  content.py  core.py  expanded_content.py  frontend.py  llm.py  photo.py  retrieval.py  species_model.py  vision.py  weather.py  weather_locations.py
scripts/: build_knowledge_db.py  configure_hotspot_nmcli.sh  evaluate_snake_photos.py  evaluate_survival_questions.py  hf_publish_space.sh  install_llama_cpp_pi.sh  install_pi_services.sh  install_vision_model_pi.sh  modal_smoke.sh  pi_deploy_notes.md  pi_smoke_test.py  run_pi_remote_test.sh
systemd/: llama-server.service  outbush-ai.service
tests/: test_core.py  test_training_targets.py  test_vision.py
